@@ -46,6 +46,7 @@ Make some changes
     >>> self.browser.getControl(name='form.enable_livesearch').value = False
     >>> self.browser.getControl(name='form.types_not_searched').value = \
     ...     ['Event', 'Document']
+    >>> self.browser.getControl(name='form.sort_on').value = ['Date']
     
 
 Click the save button:
@@ -75,6 +76,9 @@ Make sure the changes have been applied correctly to the tool:
 
     >>> 'File' in self.site_props.types_not_searched
     True
+
+    >>> self.site_props.sort_on
+    'Date'
 
 So called 'bad types' are not listed in the search panel, but they
 should still be listed in the site_properties as not searchable:
